applied model changes to jpa models and openapi spec
