# application-apis/openapi/components/Schemas.json
@@ -3,7 +3,7 @@
     "type": "object",
     "required": [
       "id",
-      "groupId"
+      "group_id"
     ],
     "properties": {
       "id": {
@@ -11,10 +11,10 @@
         "type": "string",
         "format": "uuid"
       },
-      "groupId": {
+      "group_id": {
         "description": "Id of group this task is assigned to",
         "type": "string",
-        "format": "uuid"
+        "maxLength": 128
       },
       "priority": {
         "description": "Priority of this task for scheduling",
@@ -22,54 +22,61 @@
         "minimum": 0,
         "maximum": 999
       },
-      "earliestStart": {
-        "description": "Time, by which this task is allowed to be dispatched at earliest",
-        "type": "string",
-        "format": "partial-time"
+      "active_times": {
+        "$ref": "#ActiveTimesModel"
       },
-      "latestStart": {
-        "description": "Time, by which this task has to be dispatched at latest",
-        "type": "string",
-        "format": "partial-time"
+      "working_days": {
+        "description": "Boolean array, where each entry indicates, whereas tasks are allowed to be dispatched on that day (Starting with monday)",
+        "type": "array",
+        "items": {
+          "type": "boolean"
+        },
+        "minItems": 7,
+        "maxItems": 7
       },
-      "workingDays": {
-        "description": "Days for processing",
-        "type": "integer",
-        "minimum": 1
-      },
-      "typeFlag": {
+      "type_flag": {
         "description": "Type of this task (relevant for scheduling)",
         "type": "string",
+        "default": "batch",
         "enum": [
           "batch",
-          "user"
+          "realtime"
         ]
-      },
-      "maxFailures": {
-        "description": "Maximum number of failures this task is allowed to fail",
-        "type": "integer",
-        "minimum": 0
       },
       "mode": {
         "description": "Mode of task",
         "type": "string",
+        "default": "parallel",
         "enum": [
           "sequential",
           "parallel"
         ]
       },
-      "indexNumber": {
-        "description": "[only with mode = sequential] Index number of task in corresponding sequence",
+      "retries": {
+        "description": "Number of times, this task has been retried",
         "type": "integer",
-        "minimum": 0
+        "minimum": 0,
+        "default": 0
+      },
+      "paused": {
+        "description": "Boolean, which identifies, whereas this group (and all of its tasks) are currently paused",
+        "type": "boolean",
+        "default": "false"
       },
       "force": {
-        "description": "[only with mode = sequential] If set to true: ignore indexNumber and do not wait on previous tasks",
-        "type": "boolean"
+        "description": "If set to true: send task directly to dispatcher without scheduling",
+        "type": "boolean",
+        "default": "false"
       },
-      "parallelismDegree": {
+      "index_number": {
+        "description": "[only with mode = sequential] Index number of task in corresponding sequence",
+        "type": "integer",
+        "minimum": 1
+      },
+      "parallelism_degree": {
         "description": "[only with mode = parallel] Number of tasks allowed to be executed at the same time",
-        "type": "integer"
+        "type": "integer",
+        "minimum": 1
       },
       "meta": {
         "description": "Key-value object for meta-data",
@@ -98,12 +105,12 @@
       "id": {
         "description": "Primary id of task object",
         "type": "string",
-        "format": "uuid"
+        "maxLength": 128
       },
-      "parentId": {
+      "parent_id": {
         "description": "Id of parent group object",
         "type": "string",
-        "format": "uuid"
+        "maxLength": 128
       },
       "priority": {
         "description": "Priority of this task for scheduling",
@@ -111,12 +118,34 @@
         "minimum": 0,
         "maximum": 999
       },
-      "typeFlag": {
+      "active_times": {
+        "$ref": "#ActiveTimesModel"
+      },
+      "working_days": {
+        "description": "Boolean array, where each entry indicates, whereas tasks are allowed to be dispatched on that day (Starting with monday)",
+        "type": "array",
+        "items": {
+          "type": "boolean"
+        },
+        "minItems": 7,
+        "maxItems": 7
+      },
+      "type_flag": {
         "description": "Type of this task (relevant for scheduling)",
         "type": "string",
+        "default": "batch",
         "enum": [
           "batch",
-          "user"
+          "realtime"
+        ]
+      },
+      "mode": {
+        "description": "Mode of tasks of this group",
+        "type": "string",
+        "default": "parallel",
+        "enum": [
+          "sequential",
+          "parallel"
         ]
       },
       "paused": {
@@ -124,31 +153,34 @@
         "type": "boolean",
         "default": "false"
       },
-      "maxFailures": {
-        "description": "Maximum number of failures this task is allowed to fail",
+      "last_index_number": {
+        "description": "Index number of last dispatched task of this group",
         "type": "integer",
         "minimum": 0
       },
-      "mode": {
-        "description": "Mode of tasks of this group",
-        "type": "string",
-        "enum": [
-          "sequential",
-          "parallel"
-        ]
-      },
-      "indexNumber": {
-        "description": "[only with mode = sequential] Index number of task in corresponding sequence",
-        "type": "integer",
-        "minimum": 0
-      },
-      "force": {
-        "description": "[only with mode = sequential] If set to true: ignore indexNumber and do not wait on previous tasks",
-        "type": "boolean"
-      },
-      "parallelismDegree": {
+      "parallelism_degree": {
         "description": "[only with mode = parallel] Number of tasks allowed to be executed at the same time",
-        "type": "integer"
+        "type": "integer",
+        "minimum": 1
+      }
+    }
+  },
+  "ActiveTimesModel": {
+    "description": "Array containing time frames, in which tasks are allowed to be dispatched",
+    "type": "array",
+    "items": {
+      "type": "object",
+      "properties": {
+        "from": {
+          "description": "Start of time frame",
+          "type": "string",
+          "format": "partial-time"
+        },
+        "to": {
+          "description": "End of time frame",
+          "type": "string",
+          "format": "partial-time"
+        }
       }
     }
   },
