# application-main/src/main/java/com/honeybadgers/realtimescheduler/model/Group.java
@@ -1,21 +1,33 @@
 package com.honeybadgers.realtimescheduler.model;
 
+import com.vladmihalcea.hibernate.type.array.IntArrayType;
+import com.vladmihalcea.hibernate.type.json.JsonBinaryType;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
 import org.hibernate.annotations.CreationTimestamp;
+import org.hibernate.annotations.Type;
+import org.hibernate.annotations.TypeDef;
+import org.hibernate.annotations.TypeDefs;
 
 import javax.persistence.*;
 import javax.validation.constraints.Max;
 import javax.validation.constraints.Min;
 import java.math.BigInteger;
+import java.sql.Array;
 import java.sql.Timestamp;
+import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import java.util.UUID;
 
 @Entity
-@Table(name = "groups")
+@Table(name = "\"group\"")
+@TypeDefs({
+        @TypeDef(name = "jsonb", typeClass = JsonBinaryType.class),
+        @TypeDef(name = "int-array", typeClass = IntArrayType.class)
+})
 @Getter
 @Setter
 @AllArgsConstructor
@@ -32,19 +44,43 @@ public class Group {
 
     @Max(value = 999)
     @Min(value = 0)
-    @Column(nullable = false)
+    @Column(name = "priority", nullable = false)
     private int priority;
+
+    @Type(type = "jsonb")
+    @Column(name = "active_times", columnDefinition = "jsonb")
+    @Basic(fetch = FetchType.LAZY)
+    private List<ActiveTimes> activeTimeFrames;
+
+    // hibernate does not support boolean[] not even using hibernate-types-52
+    @Type(type = "int-array")
+    @Column(name = "working_days", columnDefinition = "integer[]")
+    private int[] workingDays;
 
     @Enumerated(EnumType.STRING)
     @Column(name = "type_flag", nullable = false)
-    private TypeFlagEnum typeFlagEnum;
+    private TypeFlagEnum typeFlagEnum = TypeFlagEnum.Batch;
 
     @Enumerated(EnumType.STRING)
     @Column(name = "mode", nullable = false)
-    private ModeEnum modeEnum;
+    private ModeEnum modeEnum = ModeEnum.Parallel;
 
-    private int maxFailures;
-
+    @Column(name = "paused", nullable = false)
     private boolean paused = false;
 
+    @Min(value = 0)
+    @Column(name = "last_index_number")
+    private Integer lastIndexNumber;
+
+    @Min(value = 1)
+    @Column(name = "parallelism_degree")
+    private Integer parallelismDegree;
+
+
+    @PrePersist
+    void checkModeParameters() {
+        if(this.modeEnum == ModeEnum.Sequential && this.lastIndexNumber == null) {
+            this.lastIndexNumber = 0;
+        }
+    }
 }
