# application-main/src/main/java/com/honeybadgers/realtimescheduler/model/TypeFlagEnum.java
@@ -1,15 +1,15 @@
 package com.honeybadgers.realtimescheduler.model;
 
 public enum TypeFlagEnum {
-    Batch, User;
+    Batch, Realtime;
 
     public static TypeFlagEnum getFromString(String mode){
         if( mode.compareToIgnoreCase("Batch") == 0 ){
             return Batch;
-        }else if ( mode.compareToIgnoreCase( "User")  == 0){
-            return User;
-        }else{
-            return User;
+        } else if ( mode.compareToIgnoreCase( "Realtime")  == 0){
+            return Realtime;
+        } else {
+            return Batch;
         }
     }
 }
